--- a/servicos.html
+++ b/servicos.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="depoimento">
-                        <div class="depoimento-imagem esquerda">
+                        <div class="depoimento-imagem direita">
                             <img src="img/gettyimages-1252397036-612x612.jpg" alt="Imagem do Cliente 2" width="300" height="300">
                         </div>
                         <div class="depoimento-conteudo">
@@ -85,6 +85,7 @@
                     </div>
                 </div>
             </div>
+            <div class="owo"></div>
             <div class="footer">
                 <center><p>2023 - Todos os Direitos Reservados</p></center>
             </div>
