--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <center><a href="index.html"><img src="img/logo500.png"></a></center>
+            <img class="img-furro" src="img/logo500.png">
         </div>
         <div class="navbar">
             <div class="topnav" id="myTopnav">
