--- a/equipe.html
+++ b/equipe.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <center><a href="index.html"><img src="img/logo500.png"></a></center>
+            <img class="img-furro" src="img/logo500.png">
         </div>
         <div class="navbar">
             <div class="topnav" id="myTopnav">
@@ -30,17 +30,32 @@
         <div class="content2">
             <div class="linha-4">
                 <div class="coluna-6">
-                    <h2>Imagens</h2>
+                    <h2>Conheça nossa equipe:</h2>
                     <div class="imagem-container">
                         <img src="img/imagem1.jpg" alt="Imagem 1">
                         <div class="image-overlay">
-                            <a href="placeholder-sites-clientes.html" class="cta-button">Verificar LinkedIn</a>
+                            <div class="pf-button">Pedro Silva:<br>
+
+                                Cargo: Diretor de Vendas<br>
+                                Descrição: Como Diretor de Vendas, Pedro lidera a equipe de vendas da Remaxxima, definindo estratégias para alcançar metas de vendas ambiciosas. Ele supervisiona as atividades de prospecção, negociação e fechamento de negócios, sempre buscando impulsionar o crescimento da empresa.</div>
                         </div>
                     </div>
                     <div class="imagem-container">
                         <img src="img/imagem2.jpg" alt="Imagem 2">
                         <div class="image-overlay">
-                            <a href="placeholder-sites-clientes.html" class="cta-button">Verificar LinkedIn</a>
+                            <div class="pf-button">Ana Rodrigues:<br>
+
+                                Cargo: Gerente de Marketing e Inovação<br>
+                                Descrição: Como Gerente de Marketing e Inovação, Ana é responsável por liderar as iniciativas de marketing da Remaxxima. Ela desenvolve campanhas criativas, identifica oportunidades de mercado e implementa estratégias inovadoras para promover a marca da empresa.</div>
+                        </div>
+                    </div>
+                        <div class="imagem-container">
+                            <img src="img/imagem5.jpg" alt="Imagem 5">
+                            <div class="image-overlay">
+                                <div class="pf-button">Derek Shepherd:<br>
+
+                                    Cargo: Analista de Inteligência de Mercado<br>
+                                    Descrição: DerekLuís atua como Analista de Inteligência de Mercado na Remaxxima. Ele coleta e analisa dados do mercado imobiliário, identificando tendências, comportamentos do consumidor e insights estratégicos que orientam as decisões da empresa.</div>
                         </div>
                     </div>
                 </div>
@@ -49,15 +64,22 @@
                     <div class="imagem-container">
                         <img src="img/imagem3.jpg" alt="Imagem 3">
                         <div class="image-overlay">
-                            <a href="placeholder-sites-clientes.html" class="cta-button">Verificar LinkedIn</a>
+                            <div class="pf-button">Mariana Costa:<br>
+
+                                Cargo: Coordenadora de Atendimento ao Cliente<br>
+                                Descrição: Mariana é a Coordenadora de Atendimento ao Cliente da Remaxxima. Ela supervisiona a equipe de atendimento, garantindo que os clientes recebam um serviço excepcional. Além disso, ela trabalha para manter relações positivas com os clientes e resolver suas necessidades.</div>
                         </div>
                     </div>
                     <div class="imagem-container">
-                        <img src="img/imagem4.jpeg" alt="Imagem 4">
+                        <img src="img/imagem4.png" alt="Imagem 4">
                         <div class="image-overlay">
-                            <a href="placeholder-sites-clientes.html" class="cta-button">Verificar LinkedIn</a>
+                            <div class="pf-button">Ricardo Santos:<br>
+
+                                Cargo: Especialista em Desenvolvimento de Equipe<br>
+                                Descrição: Ricardo desempenha o papel de Especialista em Desenvolvimento de Equipe na Remaxxima. Ele colabora com os líderes de equipe para promover a coesão e o crescimento da equipe, oferecendo treinamento, apoio e implementando programas de desenvolvimento profissional.</div>
                         </div>
                     </div>
+
                 </div>
             </div>
             
