--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <center><a href="index.html"><img src="img/logo500.png"></a></center>
+            <img class="img-furro" src="img/logo500.png">
         </div>
         <div class="navbar">
             <div class="topnav" id="myTopnav">
@@ -62,9 +62,9 @@
                     </center>
                 </div>
                 <div class="coluna-direitos"></div>
-                    <div>
-                        <center><p>2023 - Todos os Direitos Reservados</p></center>
-                    </div>
+                <div class="footer">
+                    <center><p>2023 - Todos os Direitos Reservados</p></center>
+                </div>
                 </div>  
             </div>
         </div>
